acerto do link dos certificados

--- a/cv/index.html
+++ b/cv/index.html
@@ -70,7 +70,7 @@
                 <i class="fa fa-linkedin"></i>
               </a>
 
-              <a href="https://www.robsondesigner.com/cv/certificados" target="_blank" class="linkedin-icon social-icon">
+              <a href="https://www.robsondesigner.com/certificados" target="_blank" class="linkedin-icon social-icon">
                 <i class="fa fa-graduation-cap"></i>
               </a>
 
