site de inspiração adicionado a página de UX

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -296,7 +296,25 @@
         </div>
         <a class="resource-button" href="https://designcode.io/sketch" target="_blank">Veja</a>
       </li>
+
+      <div class="linha"></div>
+      <h2 class="margen-titulo color-design">Inspiração</h2>
+      <div class="linha"></div>
       
+      <li>
+        <div class="resource-icon">
+          <a href="http://collectui.com/#" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/804612529003626496/GO8zVitU_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://collectui.com/#" target="_blank">Collect UI</a>
+          </h2>
+          <p>Daily Inspiration Collected</p>
+        </div>
+        <a class="resource-button" href="http://collectui.com/#" target="_blank">Veja</a>
+      </li>	
 
 
     </ul>
