Web Code Tools - Front End

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -692,6 +692,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://webcode.tools/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://webcode.tools/" target="_blank">Web Code Tools</a>
+          </h2>
+          <p>Gerador de códigos</p>
+        </div>
+        <a class="resource-button" href="https://webcode.tools/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://github.com/afarkas/html5shiv" target="_blank">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
