link do site iMasters

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1029,7 +1029,22 @@
         </div>
         <a class="resource-button" href="http://sergiolopes.org/" target="_blank">Veja</a>   
       </li>
-
+      
+      <li>
+        <div class="resource-icon">
+          <a href="https://imasters.com.br/" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/872085778310057984/8scazWUB_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://imasters.com.br/" target="_blank">iMasters</a>
+          </h2>
+          <p>Blog Nacional</p>
+        </div>
+        <a class="resource-button" href="https://imasters.com.br/" target="_blank">Veja</a>   
+      </li>
+      
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Blogs Internacionais</h2>
       <div class="linha"></div>
