--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -114,6 +114,21 @@
           <p>Site para baixar todas as versões do PHP</p>
         </div>
         <a class="resource-button" href="http://museum.php.net/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://html-color-codes.info/Codigos-de-Cores-HTML/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://html-color-codes.info/Codigos-de-Cores-HTML/" target="_blank">HTML Color Codes</a>
+          </h2>
+          <p>Gráfico de cores HTML</p>
+        </div>
+        <a class="resource-button" href="https://html-color-codes.info/Codigos-de-Cores-HTML/" target="_blank">Veja</a>
         <div id="bibliotecas"></div>
       </li>
 
