--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -306,7 +306,6 @@
           <p>A quirky CSS Animation Library | <a href="https://github.com/ShakrMedia/tuesday" target="_blank"><strong style="background-color: #49FD58; padding: 3px;">Github</strong></a></p>
         </div>
         <a class="resource-button" href="https://shakrmedia.github.io/tuesday/" target="_blank">Veja</a>
-        <div id="zoom"></div>
   		</li>
   
       <li>
@@ -322,7 +321,6 @@
           <p>CSS Spinners and Loaders - Modular, Customizable and Single HTML Element Code</p>
         </div>
         <a class="resource-button" href="https://webkul.github.io/csspin/" target="_blank">Veja</a>
-        <div id="zoom"></div>
       </li>
 
       <li>
@@ -338,7 +336,6 @@
           <p>JavaScript library for creating particles</p>
         </div>
         <a class="resource-button" href="http://vincentgarreau.com/particles.js/#default" target="_blank">Veja</a>
-        <div id="zoom"></div>
       </li>  
 
       <li>
@@ -354,11 +351,27 @@
           <p>Parallax Scrolling | demo <mark><a href="https://codepen.io/mike-zarandona/full/Dasnw" target="_blank">here</a></mark></p>
         </div>
         <a class="resource-button" href="https://github.com/mike-zarandona/StickyStack.js" target="_blank">Veja</a>
+      </li>  
+
+      <li>
+        <div class="resource-icon">
+          <a href="http://animejs.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://animejs.com/" target="_blank">Anime JS</a>
+          </h2>
+          <p>Animation <mark><a href="http://animejs.com/documentation" target="_blank">documentation</a></mark></p>
+        </div>
+        <a class="resource-button" href="http://animejs.com/" target="_blank">Veja</a>
         <div id="zoom"></div>
       </li>  
 
+
       <div class="linha"></div>
-      <h2 class="margen-titulo color-frontend">Zoom | Popup</h2>
+      <h2 class="margen-titulo color-frontend">Zoom | Modal | Popup</h2>
       <div class="linha"></div>
 
       <li>
@@ -598,17 +611,17 @@
 
       <li>
         <div class="resource-icon">
-          <a href="http://devdocs.io/" target="_blank">
+          <a href="https://devdocs.io/" target="_blank">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
           <h2>
-            <a href="http://devdocs.io/" target="_blank">Dev Docs</a>
+            <a href="https://devdocs.io/" target="_blank">Dev Docs</a>
           </h2>
           <p>Documentações</p>
         </div>
-        <a class="resource-button" href="http://devdocs.io/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://devdocs.io/" target="_blank">Veja</a>
       </li>
 
       <li>
@@ -639,6 +652,21 @@
           <p>Apoio para desenvolvimento</p>
         </div>
         <a class="resource-button" href="http://www.maujor.com/tutorial/conteudo-legado-no-site-do-maujor.php" target="_blank">Veja</a>
+      </li>
+      
+      <li>
+        <div class="resource-icon">
+          <a href="https://html.spec.whatwg.org/multipage/semantics.html#semantics" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://html.spec.whatwg.org/multipage/semantics.html#semantics" target="_blank">Whatwg</a>
+          </h2>
+          <p>Apoio para desenvolvimento</p>
+        </div>
+        <a class="resource-button" href="https://html.spec.whatwg.org/multipage/semantics.html#semantics" target="_blank">Veja</a>
       </li>
 
       <!-- <li>
