--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -115,6 +115,21 @@
         </div>
         <a class="resource-button" href="http://museum.php.net/" target="_blank">Veja</a>
       </li>
+  
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">Gerador de Loren Ipsum</a>
+          </h2>
+          <p>Gerador de Loren Ipsum 4devs</p>
+        </div>
+        <a class="resource-button" href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">Veja</a>
+      </li>
 
       <li>
         <div class="resource-icon">
