--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -144,6 +144,22 @@
           <p>Gráfico de cores HTML</p>
         </div>
         <a class="resource-button" href="https://html-color-codes.info/Codigos-de-Cores-HTML/" target="_blank">Veja</a>
+      </li>
+
+       <li>
+        <div class="resource-icon">
+          <a href="https://github.com/tiaanduplessis/nanoreset" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://github.com/tiaanduplessis/nanoreset" target="_blank">Nanoreset - CSS Reset</a>
+          </h2>
+          <p>O CSS Reset sobrepõe os valores padrões de formatação "original" dos navegadores</p>
+          <p>Outras Opções <mark><a href="https://necolas.github.io/normalize.css/" target="_blank">Normalize</a></mark>, <mark><a href="https://jonathantneal.github.io/sanitize.css/" target="_blank">Sanitize</a></mark>, <mark><a href="https://github.com/jgthms/minireset.css" target="_blank">minireset</a></mark> </p>
+        </div>
+        <a class="resource-button" href="https://github.com/tiaanduplessis/nanoreset" target="_blank">Veja</a>
         <div id="bibliotecas"></div>
       </li>
 
