Ferramentas de gestão de projetos

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -233,7 +233,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://mailchimp.com/" target="_blank" bgcolor="#000">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/10269382_10153468154900777_1740954471200061858_n.png?oh=c61f34d94fb035f9129b253cb2adbdf4&oe=5AE54760" alt="#" />
+            <img src="https://pbs.twimg.com/profile_images/709825689181147136/SdVd6iit_400x400.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -244,7 +244,21 @@
         </div>
         <a class="resource-button" href="https://mailchimp.com/" target="_blank">Veja</a>
       </li>
-
+      
+      <li>
+        <div class="resource-icon">
+          <a href="https://trello.com" target="_blank" bgcolor="#000">
+            <img src="https://pbs.twimg.com/profile_images/880888269524922372/5ffIqzlP_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://trello.com" target="_blank">Trello</a>
+          </h2>
+          <p>Ferramenta de gestão de projeto. Outra alternativa é o <a href="https://asana.com" target="_blank">Asana</p>
+        </div>
+        <a class="resource-button" href="https://trello.com" target="_blank">Veja</a>
+      </li>
       
 
     </ul>
