--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -153,6 +153,21 @@
         </div>
         <a class="resource-button" href="http://www.servicedesigntools.org/" target="_blank">Veja</a>
       </li>
+      
+      <li>
+        <div class="resource-icon">
+          <a href="https://goodui.org/home.php" target="_blank">
+            <img src="https://instagram.fcwb2-1.fna.fbcdn.net/vp/da7809891c5b2a392c9720f3a01b1d27/5B8537CF/t51.2885-19/s150x150/12237494_442003032657186_55213410_a.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://goodui.org/home.php" target="_blank">Goodui</a>
+          </h2>
+          <p>Blog</p>
+        </div>
+        <a class="resource-button" href="https://goodui.org/home.php" target="_blank">Veja</a>
+      </li>
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Ferramentas</h2>
