link PhoneGap Build

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -39,8 +39,8 @@
           <p>Imagens para prótipos; outra alternativa é o <a href="https://dummyimage.com/" target="_blank"><mark>Dynamic Dummy Image</mark></a></p>
         </div>
         <a class="resource-button" href="https://placehold.it/" target="_blank">Veja</a>
-      </li>
-    
+      </li>  
+
       <li>
         <div class="resource-icon">
           <a href="https://snag.gy/" target="_blank">
@@ -161,6 +161,21 @@
         </div>
         <a class="resource-button" href="https://github.com/tiaanduplessis/nanoreset" target="_blank">Veja</a>
         <div id="bibliotecas"></div>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://build.phonegap.com" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://build.phonegap.com" target="_blank">PhoneGap Build</a>
+          </h2>
+          <p>Serviço online para a criação de aplicações móveis com HTML, CSS e JS (Apache Cordova &amp; PhoneGap)</p>
+        </div>
+        <a class="resource-button" href="https://build.phonegap.com" target="_blank">Veja</a>
       </li>
 
       <div class="linha"></div>        
