Documentação do Cordova

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -699,6 +699,21 @@
         </div>
         <a class="resource-button" href="http://www.maujor.com/tutorial/conteudo-legado-no-site-do-maujor.php" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://cordova.apache.org/docs/en/latest/ " target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/1769287743/cordova_256_400x400.png" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://cordova.apache.org/docs/en/latest/ " target="_blank">Cordova</a>
+          </h2>
+          <p>Documentação</p>
+        </div>
+        <a class="resource-button" href="https://cordova.apache.org/docs/en/latest/ " target="_blank">Veja</a>
+      </li>
       
       <li>
         <div class="resource-icon">
