Adicionado instrutor Sergio Lopes no site

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1593,6 +1593,26 @@
         <a class="resource-button" href="http://blog.evaldojunior.com.br/" target="_blank">Veja</a>   
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="http://sergiolopes.org/" target="_blank">
+            <img src="http://sergiolopes.org/img/base/sergiolopes.svg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://sergiolopes.org/" target="_blank">Sergio Lopes</a>
+          </h2>
+          <p>Desenvolvedor Web, focado em front-end, mobile e otimizações. Palestrante e instrutor na Caelum.
+            </a>
+          </p>    
+          <p><mark><a href="https://github.com/sergiolopes" target="_blank">Github</a></mark> |<mark><a href="http://cozinhapp.sergiolopes.org/" target="_blank">cozinhapp</a></mark></p>      
+          <p><strong>Autor do livro:</strong>A Web Mobile</p>
+          <p><strong>Instrutor da Alura: </strong>Curso Cordova &amp; Phonegap</p>
+        </div>
+        <a class="resource-button" href="http://sergiolopes.org/" target="_blank">Veja</a>   
+      </li>
+
     </ul>
      
     <ul class="sidebar-navigation">
