--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1366,7 +1366,7 @@
           <h2>
             <a href="https://jsfiddle.net/" target="_blank">JS Fiddle</a>
           </h2>
-          <p>Test your JavaScript, CSS, HTML or CoffeeScript online with JSFiddle code editor.</p>
+          <p>Test your JavaScript, CSS, HTML or CoffeeScript online with JSFiddle code editor. <a href="https://jsfiddle.net/user/RobsonVinicius" target="_blank">(My)</a></p>
         </div>
         <a class="resource-button" href="https://jsfiddle.net/" target="_blank">Veja</a>   
 	    </li>
