link de mockups online

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1243,6 +1243,34 @@
 				<div id="musicas"></div>
 			</li>
 
+			<li>
+				<div class="resource-icon">
+					<a href="http://magicmockups.com/" target="_blank">
+						<img src="https://pbs.twimg.com/profile_images/535111935516106755/kXUDiI6G_400x400.jpeg" alt="Retro Vectors" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="http://magicmockups.com/" target="_blank">Magic Mockups</a> </h2>
+					<p>Mockups direto no navegador (free) outra alternativa <mark><a href="http://mockdrop.io/" target="_blank">Mockdrop</a></mark></p>
+				</div>
+				<a class="resource-button" href="http://magicmockups.com/" target="_blank">Veja</a>
+				<div id="musicas"></div>
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="https://placeit.net/" target="_blank">
+						<img src="https://pbs.twimg.com/profile_images/956228753004281856/m8sPSHUV_200x200.jpg" alt="Retro Vectors" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://placeit.net/" target="_blank">Place it</a> </h2>
+					<p>Mockups direto no navegador (pago) outra alternativa  <mark><a href="https://www.psdcovers.com/" target="_blank">PSD Covers</a></mark></p>
+				</div>
+				<a class="resource-button" href="https://placeit.net/" target="_blank">Veja</a>
+				<div id="musicas"></div>
+			</li>
+
 			<div class="linha"></div>
 			<h2 class="margen-titulo color-apoio">Músicas &amp; loops</h2>
 			<div class="linha"></div>
