link do greensock e snapsvg

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -327,6 +327,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://greensock.com/gsap" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/497590165750034433/h2gXRRrD_400x400.png" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://greensock.com/gsap" target="_blank">Greensock | GSAP</a>
+          </h2>
+          <p>Criação de animações em SVG. | Outra alternativa <mark><a href="http://snapsvg.io/" target="_blank">Snap.svg</a></mark></p>
+        </div>
+        <a class="resource-button" href="https://greensock.com/gsap" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="http://mynameismatthieu.com/WOW/" target="_blank">
             <img src="../../base/images/wow-animate.jpg" alt="#" />
           </a>
