--- a/cv/index.html
+++ b/cv/index.html
@@ -56,7 +56,7 @@
           <div class="cv-section-title">
             <!--<img src="_content/140x140.png" alt="">-->
               <h1>Robson Vinicius de Oliveira
-                <small>Designer | Front End | Marketing | SEO</small>
+                <small>Designer | Front End | Marketing | SEO | UX</small>
               </h1>
           </div>
           <!-- end section-title -->
@@ -195,7 +195,7 @@
         <div class="span9">
           <div class="cv-item">
             <p class="period">Junho 2015 - atualmente</p>
-            <h3><strong>Web Designer | Designer Gráfico | Front End</strong></h3>
+            <h3><strong>Desenvolvedor Front End | Designer Gráfico | UX</strong></h3>
             <h4>Freelancer</h4>
             <ul class="fill-circle">
               <li>Prototipação | Usabilidade | UX</li>
@@ -210,7 +210,7 @@
         <!-- end .cv-item -->
           <div class="cv-item">
             <p class="period">Outubro 2014 - Maio 2015</p>
-            <h3><strong>Web Designer | Designer Gráfico</strong></h3>
+            <h3><strong>Front End | Designer Gráfico</strong></h3>
             <h4>Start Nutrition | GMX Consult</h4>
             <ul class="fill-circle">
               <li>Manutenção e desenvolvimento de Sites</li>
@@ -226,7 +226,7 @@
           <!-- end .cv-item -->
           <div class="cv-item">
             <p class="period">Março 2014 - Maio 2015</p>
-            <h3><strong>Web Designer | Designer Gráfico</strong></h3>
+            <h3><strong>Front End | Designer Gráfico</strong></h3>
             <h4>GMX Consult</h4>
             <ul class="fill-circle">
               <li>Manutenção de Sites</li>
@@ -239,7 +239,7 @@
           <!-- end .cv-item -->
           <div class="cv-item">
             <p class="period">Outubro 2013 - Fevereiro 2014</p>
-            <h3><strong>Designer Gráfico</strong></h3>
+            <h3><strong>Front End | Designer Gráfico</strong></h3>
             <h4>EECOMM Comunicação &amp; Marketing</h4>
             <ul class="fill-circle">
               <li>Criação de identidade visual</li>
