Link do site de inspiração para textos de email Marketing

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1696,6 +1696,26 @@
 				<a class="resource-button" href="https://www.dropbox.com/s/73c7z1umsr455af/Links.txt?dl=0" target="_blank">Veja</a>
 			</li>
 
+			<div id="atalhos"></div>
+
+			<div class="linha"></div>
+			<h2 class="margen-titulo color-apoio">Atalhos</h2>
+			<div class="linha"></div>
+			
+			<li>
+				<div class="resource-icon">
+					<a href="https://shortcuts.design/" target="_blank">
+						<img src="https://shortcuts.design/logo@2x.png" alt="My Favorites" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://shortcuts.design/" target="_blank">Shortcuts</a> </h2>
+					<p>Lista de Atalhos</p>
+				</div>
+				<a class="resource-button" href="https://shortcuts.design/" target="_blank">Veja</a>
+			</li>
+
+
 		</ul>
 
   	<ul class="sidebar-navigation">
@@ -1748,6 +1768,7 @@
 			<li><a class="scroll" href="#sons">Sound Effects</a></li>
 			<li><a class="scroll" href="#video">Vídeo</a></li>
 			<li><a class="scroll" href="#outros">Outros</a></li>
+			<li><a class="scroll" href="#atalhos">Atalhos</a></li>
   	</ul>
 
 </main>
