--- a/my/paginas/emailMkt/index.html
+++ b/my/paginas/emailMkt/index.html
@@ -51,6 +51,21 @@
             </div>
             <a class="resource-button" href="http://robsondesigner.com/my/emails/Mkt2/" target="_blank">Veja</a>
           </li>
+          
+          <li>
+            <div class="resource-icon">
+              <a href="https://robsonvinicius.github.io/email-marketing-responsivo/" target="_blank">
+                <img src="../../base/images/portfolios.jpg" alt="email marketing 3" />
+              </a>
+            </div>
+            <div class="resource-details">
+              <h2>
+                <a href="https://robsonvinicius.github.io/email-marketing-responsivo/" target="_blank">Email Mkt 3</a>
+              </h2>
+              <p>Email Marketing Responsivo</p>
+            </div>
+            <a class="resource-button" href="https://robsonvinicius.github.io/email-marketing-responsivo/" target="_blank">Veja</a>
+          </li>
 
           <div class="linha"></div>
             <h2 class="margen-titulo color-frontend">Utilitários</h2>        
@@ -74,7 +89,7 @@
           <li>
             <div class="resource-icon">
               <a href="https://www.campaignmonitor.com/css/" target="_blank">
-                <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/22008295_10154777844715877_3510000630998569618_n.jpg?oh=15ddacf72c9fc1a2d27258e7d560a53c&oe=5A9E21FA" alt="#" />
+                <img src="https://pbs.twimg.com/profile_images/1009561558186250241/LHo3_yQM_400x400.jpg" alt="#" />
               </a>
             </div>
             <div class="resource-details">
@@ -99,6 +114,21 @@
             </div>
             <a class="resource-button" href="http://premailer.dialect.ca/" target="_blank">Veja</a>            
           </li>
+
+           <li>
+            <div class="resource-icon">
+              <a href="https://www.goodemailcopy.com/" target="_blank">
+                <img src="../../base/images/portfolios.jpg" alt="email marketing 1" />
+            </div>
+            <div class="resource-details">
+              <h2>
+                <a href="https://www.goodemailcopy.com/" target="_blank">Just Good Copy</a>
+              </h2>
+              <p>Inspiração de textos para e-mail marketing.</p>
+            </div>
+            <a class="resource-button" href="https://www.goodemailcopy.com/" target="_blank">Veja</a>            
+          </li>
+
 
 
         
@@ -127,7 +157,7 @@
           <li>
             <div class="resource-icon">
               <a href="https://www.pontofrio-imagens.com.br/html/news/parceiros/2017/intermail/20171018/4d0b48201140/index.html?59e68" target="_blank">
-                <img src="https://instagram.fcwb1-1.fna.fbcdn.net/t51.2885-19/s320x320/13743080_141432582956244_63296901_a.jpg" alt="email marketing 1" />
+                <img src="https://pbs.twimg.com/profile_images/936643060670267394/GBxjjPdK_400x400.jpg" alt="email marketing 1" />
               </a>
             </div>
             <div class="resource-details">
@@ -142,7 +172,7 @@
           <li>
             <div class="resource-icon">
               <a href="https://email.udemy.com/pub/sf/ResponseForm?_ri_=X0Gzc2X%3DYQpglLjHJlYQGjSaaIScNq5AkNorhRTGzazezfWImNSDPRp71HjJ32h0yzczbcFaE1YsRdKi7uGHviFmRVXMtX%3DYQpglLjHJlYQGkH6SLCc6D6AHCUzalrahzd4aHIozfzgYwt5XTbnNq4BbzcIXdqb83AYazgzeBJHa0RuKYO&_ei_=EolaGGF4SNMvxFF7KucKuWMGgsFXN93Du_79o6SeizvfXdVQ3W69c4RTfstjbVd8_COxtYp9TrR_ZNtH4g" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/923671662536531969/oXlPsa_W_400x400.jpg" alt="email marketing 1" />
+                <img src="https://pbs.twimg.com/profile_images/1013891333155577856/7EsvLcOr_400x400.jpg" alt="email marketing 1" />
               </a>
             </div>
             <div class="resource-details">
@@ -157,7 +187,7 @@
           <li>
             <div class="resource-icon">
               <a href="http://img.afiliados.com.br/mkt/email2.php?id=submarino-20170321094432-016287&btg_flag=1&btg_source=7HX37xXf9HImyZYEw2IhyxXM9HiEyJ%3D%3D" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/937768180759572480/AMrh1U14_400x400.jpg" alt="email marketing 1" />
+                <img src="https://pbs.twimg.com/profile_images/1016745159684493313/bJw5wzIQ_400x400.jpg" alt="email marketing 1" />
               </a>
             </div>
             <div class="resource-details">
@@ -172,7 +202,7 @@
           <li>
             <div class="resource-icon">
               <a href="http://www.casasbahia-imagens.com.br/html/news/parceiros/2017/intermail/20170321/4adad4143247/index.html?58d01&btg_flag=1&btg_source=7HX37xXf9HImyZYEw2IhyxXM9HiEyJ%3D%3D" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/919938722422054912/KCm4Gt-I_400x400.jpg" />
+                <img src="https://pbs.twimg.com/profile_images/980894126467112960/UDwevB2x_400x400.jpg" />
               </a>
             </div>
             <div class="resource-details">
@@ -187,7 +217,7 @@
           <li>
             <div class="resource-icon">
               <a href="http://www.lge-mkt.com.br/lercampanha?email=robson.dgn@outlook.com&mailingSend=8684074" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/931216598714724352/izZFGyLr_400x400.jpg" />
+                <img src="https://pbs.twimg.com/profile_images/551071256615743488/xCPCV_pV_400x400.jpeg" />
               </a>
             </div>
             <div class="resource-details">
@@ -217,7 +247,7 @@
           <li>
             <div class="resource-icon">
               <a href="https://e.microsoft.com/ViewInBrowser/list1/DWBkkr/Key-3227601.C.DV2V2.z.KV.-.nG7LPVR" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/963788648822042627/SQR9VsDw_400x400.jpg" />
+                <img src="https://pbs.twimg.com/profile_images/509007133283598338/-T4ohr0o_400x400.png" />
               </a>
             </div>
             <div class="resource-details">
@@ -247,7 +277,7 @@
           <li>
             <div class="resource-icon">
               <a href="http://us8.campaign-archive1.com/?u=3538b21ebb1c494b11b814903&id=3a4c6ef3bd&e=56763bc990" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/831107070355202048/KiNSrwY8_400x400.jpg" />
+                <img src="https://pbs.twimg.com/profile_images/1007281376545181697/IZJHJxpV_400x400.jpg" />
               </a>
             </div>
             <div class="resource-details">
@@ -263,7 +293,7 @@
           <li>
             <div class="resource-icon">
               <a href="http://relacionamento.fastshop.com.br/pub/sf/ResponseForm?_ri_=X0Gzc2X%3DYQpglLjHJlTQGtzezaCMzbBWklDw80M88zfFhbEe9pX6YqD9rAl1tqd02jImv9bVXMtX%3DYQpglLjHJlTQGm5C9uRkuCtt3Czg1qWvX0hvhzdzfR64NjgJ07jtpWYcNFDbuR&_ei_=Eua6P6OCdXDo19PEwR2Ywy3B5jJT0M" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/738458569536901122/fpPyiv0O_400x400.jpg" />
+                <img src="https://pbs.twimg.com/profile_images/971869136291811329/rI_gx5yM_400x400.jpg" />
               </a>
             </div>
             <div class="resource-details">
@@ -282,7 +312,7 @@
           <li>
             <div class="resource-icon">
               <a href="https://www.campaignmonitor.com/blog/" target="_blank">
-                <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/22008295_10154777844715877_3510000630998569618_n.jpg?oh=15ddacf72c9fc1a2d27258e7d560a53c&oe=5A9E21FA" />
+                <img src="https://pbs.twimg.com/profile_images/1009561558186250241/LHo3_yQM_400x400.jpg" />
               </a>
             </div>
             <div class="resource-details">
