links de modelos de arquitetura CSS

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -88,21 +88,6 @@
 
       <li>
         <div class="resource-icon">
-          <a href="https://www.caniuse.com" target="_blank">
-            <img src="../../base/images/caniuse.jpg" alt="#" />
-          </a>
-        </div>
-        <div class="resource-details">
-          <h2>
-            <a href="https://www.caniuse.com" target="_blank">Can I use</a>
-          </h2>
-          <p>Para descobrir em quais sistemas a propriedade funciona</p>
-        </div>
-        <a class="resource-button" href="https://www.caniuse.com" target="_blank">Veja</a>
-      </li>
-
-      <li>
-        <div class="resource-icon">
           <a href="http://museum.php.net/" target="_blank">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
@@ -146,7 +131,27 @@
         <a class="resource-button" href="https://html-color-codes.info/Codigos-de-Cores-HTML/" target="_blank">Veja</a>
       </li>
 
-       <li>
+      <li>
+        <div class="resource-icon">
+          <a href="https://build.phonegap.com" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://build.phonegap.com" target="_blank">PhoneGap Build</a>
+          </h2>
+          <p>Serviço online para a criação de aplicações móveis com HTML, CSS e JS (Apache Cordova &amp; PhoneGap)</p>
+        </div>
+        <a class="resource-button" href="https://build.phonegap.com" target="_blank">Veja</a>
+        <div id="css"></div>
+      </li>
+
+      <div class="linha"></div>        
+      <h2 class="margen-titulo color-frontend">CSS</h2>
+      <div class="linha"></div>      
+
+      <li>
         <div class="resource-icon">
           <a href="https://github.com/tiaanduplessis/nanoreset" target="_blank">
             <img src="../../base/images/portfolios.jpg" alt="#" />
@@ -159,8 +164,22 @@
           <p>O CSS Reset sobrepõe os valores padrões de formatação "original" dos navegadores</p>
           <p>Outras Opções <mark><a href="https://necolas.github.io/normalize.css/" target="_blank">Normalize</a></mark>, <mark><a href="https://jonathantneal.github.io/sanitize.css/" target="_blank">Sanitize</a></mark>, <mark><a href="https://github.com/jgthms/minireset.css" target="_blank">minireset</a></mark> </p>
         </div>
-        <a class="resource-button" href="https://github.com/tiaanduplessis/nanoreset" target="_blank">Veja</a>
-        <div id="bibliotecas"></div>
+        <a class="resource-button" href="https://github.com/tiaanduplessis/nanoreset" target="_blank">Veja</a>        
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.caniuse.com" target="_blank">
+            <img src="../../base/images/caniuse.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.caniuse.com" target="_blank">Can I use</a>
+          </h2>
+          <p>Para descobrir em quais sistemas a propriedade funciona</p>
+        </div>
+        <a class="resource-button" href="https://www.caniuse.com" target="_blank">Veja</a>
       </li>
 
       <li>
@@ -176,21 +195,23 @@
           <p>Gera os prefixos das propriedades CSS que estão sendo implementadas</p>
         </div>
         <a class="resource-button" href="https://autoprefixer.github.io/" target="_blank">Veja</a>
+        <div id="bibliotecas"></div>
       </li>
 
       <li>
         <div class="resource-icon">
-          <a href="https://build.phonegap.com" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+          <a href="http://blog.caelum.com.br/comecando-a-organizar-seu-css/" target="_blank">
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/10155941_10152196905759086_2402332230842303175_n.png?_nc_cat=0&oh=7fc37bada3e79e0ab0392f7c954465b8&oe=5BE7B1FE" alt="#" />
           </a>
         </div>
         <div class="resource-details">
           <h2>
-            <a href="https://build.phonegap.com" target="_blank">PhoneGap Build</a>
+            <a href="http://blog.caelum.com.br/comecando-a-organizar-seu-css/" target="_blank">Modelos de arquitetura de CSS</a>
           </h2>
-          <p>Serviço online para a criação de aplicações móveis com HTML, CSS e JS (Apache Cordova &amp; PhoneGap)</p>
+          <p><mark><a href="http://getbem.com/introduction/" target="_blank">BEM</a></mark>, <mark><a href="http://oocss.org/" target="_blank">OOCSS</a></mark>, DRY CSS, SMACSS, Atomic Design</p>
         </div>
-        <a class="resource-button" href="https://build.phonegap.com" target="_blank">Veja</a>
+        <a class="resource-button" href="http://blog.caelum.com.br/comecando-a-organizar-seu-css/" target="_blank">Veja</a>
+        <div id="bibliotecas"></div>
       </li>
 
       <div class="linha"></div>        
@@ -291,6 +312,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="http://getskeleton.com/" target="_blank">
+            <img src="http://getskeleton.com/images/feather.svg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://getskeleton.com/" target="_blank">Skeleton</a>
+          </h2>
+          <p>Framework leve - 400 linhas</p>
+        </div>
+        <a class="resource-button" href="http://getskeleton.com/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="http://propeller.in/index.html" target="_blank">
             <img src="../../base/images/propeller.jpg" alt="#" />
           </a>
@@ -322,7 +358,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://prismjs.com" target="_blank">
-            <img src="../../base/images/frameworks.jpg" alt="#" />
+            <img src="https://pbs.twimg.com/profile_images/2451426554/Screen_Shot_2012-07-31_at_21.57.03__400x400.png" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -332,6 +368,7 @@
           <p>Framework para demonstração de códigos</p>
         </div>
         <a class="resource-button" href="https://prismjs.com" target="_blank">Veja</a>
+        <div id="animacoes"></div>
       </li>
 
       <div class="linha"></div>        
@@ -1690,7 +1727,8 @@
 
       <div class="linha2"></div>           
       <h2 class="margen-titulo" style="color: #DD2C00">Filtro</h2>
-      <li><a class="scroll" href="#bibliotecas">Bibliotecas</a></li>
+      <li><a class="scroll" href="#css">CSS</a></li>
+      <li><a class="scroll" href="#bibliotecas">Bibliotecas</a></li>      
       <li><a class="scroll" href="#animacoes">Animações</a></li>
       <li><a class="scroll" href="#zoom">Zoom | Popup</a></li> 
       <li><a class="scroll" href="#icones">Ícones</a></li> 
