link para o framework Aurelia

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -43,6 +43,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">Gerador de Loren Ipsum</a>
+          </h2>
+          <p>Gerador de Loren Ipsum 4devs</p>
+        </div>
+        <a class="resource-button" href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://snag.gy/" target="_blank">
             <img src="../../base/images/snaggy.jpg" alt="#" />
           </a>
@@ -101,21 +116,6 @@
         <a class="resource-button" href="http://museum.php.net/" target="_blank">Veja</a>
       </li>
   
-      <li>
-        <div class="resource-icon">
-          <a href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
-          </a>
-        </div>
-        <div class="resource-details">
-          <h2>
-            <a href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">Gerador de Loren Ipsum</a>
-          </h2>
-          <p>Gerador de Loren Ipsum 4devs</p>
-        </div>
-        <a class="resource-button" href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">Veja</a>
-      </li>
-
       <li>
         <div class="resource-icon">
           <a href="https://html-color-codes.info/Codigos-de-Cores-HTML/" target="_blank">
@@ -323,6 +323,21 @@
           <p>Framework leve - 400 linhas</p>
         </div>
         <a class="resource-button" href="http://getskeleton.com/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://aurelia.io/" target="_blank">
+            <img src="https://aurelia.io/styles/images/logo.svg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://aurelia.io/" target="_blank">Aurelia</a>
+          </h2>
+          <p>Framework | Javascript</p>
+        </div>
+        <a class="resource-button" href="https://aurelia.io/" target="_blank">Veja</a>
       </li>
 
       <li>
