link do site You Might Not Need JQuery

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -147,6 +147,22 @@
         <div id="css"></div>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="http://youmightnotneedjquery.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://youmightnotneedjquery.com/" target="_blank">You might not need Jquery</a>
+          </h2>
+          <p>Alternativa para utilizar o javascript sem precisar do Jquery</p>
+        </div>
+        <a class="resource-button" href="http://youmightnotneedjquery.com/" target="_blank">Veja</a>
+        <div id="css"></div>
+      </li> 
+
       <div class="linha"></div>        
       <h2 class="margen-titulo color-frontend">CSS</h2>
       <div class="linha"></div>      
