link do css reset Eric Meyer

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -178,7 +178,7 @@
             <a href="https://github.com/tiaanduplessis/nanoreset" target="_blank">Nanoreset - CSS Reset</a>
           </h2>
           <p>O CSS Reset sobrepõe os valores padrões de formatação "original" dos navegadores</p>
-          <p>Outras Opções <mark><a href="https://necolas.github.io/normalize.css/" target="_blank">Normalize</a></mark>, <mark><a href="https://jonathantneal.github.io/sanitize.css/" target="_blank">Sanitize</a></mark>, <mark><a href="https://github.com/jgthms/minireset.css" target="_blank">minireset</a></mark> </p>
+          <p>Outras Opções <mark><a href="https://necolas.github.io/normalize.css/" target="_blank">Normalize</a></mark>, <mark><a href="https://meyerweb.com/eric/tools/css/reset/" target="_blank">Eric Meyer</a></mark>, <mark><a href="https://github.com/jgthms/minireset.css" target="_blank">minireset</a></mark>, <mark><a href="https://yuilibrary.com/yui/docs/cssreset/" target="_blank">YUI (css reset da Yahoo)</a></mark> </p>
         </div>
         <a class="resource-button" href="https://github.com/tiaanduplessis/nanoreset" target="_blank">Veja</a>        
       </li>
