link Material Design Components

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -300,7 +300,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://designcode.io/sketch" target="_blank">
-            <img src="https://www.sketchapp.com/images/press/sketch-press-kit/app-icons/sketch-mirror-icon@2x.png" alt="#" />
+            <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -330,6 +330,25 @@
         </div>
         <a class="resource-button" href="http://collectui.com/#" target="_blank">Veja</a>
       </li>	
+
+      <div class="linha"></div>
+      <h2 class="margen-titulo color-design">Documentações</h2>
+      <div class="linha"></div>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://material.io/design/" target="_blank">
+            <img src="../../base/images/materialdesignlite.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://material.io/design/" target="_blank">Material Design</a>
+          </h2>
+          <p>Documentação da linguagem visual do Google | <mark><a href="https://material.io/design/components/text-fields.html#text-fields-layout" target="_blank">Label</a></mark> | <mark><a href="https://material.io/archive/guidelines/resources/sticker-sheets-icons.html#" target="_blank">Ícones</a></mark></p>
+        </div>
+        <a class="resource-button" href="https://material.io/design/" target="_blank">Veja</a>
+      </li> 
 
 
     </ul>
