link do icon Finder

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -569,6 +569,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://www.iconfinder.com/" target="_blank">
+            <img src="https://cdn0.iconfinder.com/static/img/logo/black.svg?32b294b019" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.iconfinder.com/" target="_blank">Icon Finder</a>
+          </h2>
+          <p>The iconic font and CSS toolkit</p>
+        </div>
+        <a class="resource-button" href="https://www.iconfinder.com/" target="_blank">Veja</a>
+      </li>   
+
+      <li>
+        <div class="resource-icon">
           <a href="http://fontawesome.io/" target="_blank">
             <img src="../../base/images/fontAwesome.jpg" alt="#" />
           </a>
